odevzdani/tests/valid_input/ok20.java
class Hello {
    static int a = 5;
}

class Main {
    static void run(){
        ifj16.print("Hello" + Hello.a);
    }
}
