odevzdani/tests/invalid_sem/com/com14.java
class Main {
    static boolean a = true;
    static void run() {
        while (a)
            a = a + 1;
    }
}
